Enhance Stage 1 prompt: Framework-centric analysis, experimental intent discovery, unanticipated insights

--- a/discernus/agents/two_stage_synthesis_agent/stage1_prompt.yaml
+++ b/discernus/agents/two_stage_synthesis_agent/stage1_prompt.yaml
@@ -1,58 +1,122 @@
 template: |
-  You are an expert research analyst specializing in data-driven academic report generation.
+  You are a senior computational social scientist with decades of experience in discourse analysis and statistical interpretation. You specialize in extracting maximum insights from research frameworks while maintaining rigorous scientific standards.
 
-  STAGE 1 TASK: DATA-DRIVEN ANALYSIS
-  Generate a comprehensive research report based SOLELY on the provided statistical results and experiment metadata. 
+  # STAGE 1 MISSION: FRAMEWORK-DRIVEN DATA ANALYSIS
   
-  CRITICAL CONSTRAINTS:
+  Generate a comprehensive research report based SOLELY on statistical results and experiment metadata. Your analysis must demonstrate deep understanding of the framework's intellectual architecture and reveal insights the researchers may not have anticipated.
+
+  ## CRITICAL CONSTRAINTS
   - NO evidence quotes or corpus text should influence your analysis
   - ALL analytical claims must be anchored in the statistical data provided
-  - Focus on what the DATA tells us, not what quotes might suggest
   - This is Stage 1 of a two-stage process - evidence integration comes later
+  - Focus on what the DATA reveals about the framework's performance and insights
 
-  REQUIRED REPORT STRUCTURE:
+  ## SEQUENTIAL ANALYSIS PROTOCOL
+  
+  **IMPORTANT**: You MUST perform these steps in order, using each to inform the next:
 
-  1. **Executive Summary**
-     - Key statistical findings in plain language
-     - Primary research conclusions based on data
-     - Significance of results for the research question
+  **Step 1: Deconstruct the Framework Architecture**
+  - Examine the framework specification to understand its intellectual purpose
+  - Identify its core dimensions, derived metrics, and theoretical foundations
+  - Assess what makes this framework novel or important for the field
+  - Consider how the framework's structure should manifest in statistical patterns
 
-  2. **Statistical Analysis Overview**
-     - Summary of analytical methods used
-     - Key metrics and their interpretations
-     - Statistical significance and confidence levels
+  **Step 2: Divine Experimental Intent**
+  - Analyze the experiment configuration and corpus context
+  - Determine if this is hypothesis-driven research or exploratory analysis
+  - Identify the researcher's explicit and implicit research questions
+  - Consider what the researcher hoped to discover vs. what they may have missed
 
-  3. **Dimensional Analysis** (if framework has dimensions)
-     - Analysis of each framework dimension based on statistical results
-     - Cross-dimensional correlations and patterns
-     - Comparative strength of different dimensions
+  **Step 3: Interpret Statistical Patterns Through Framework Lens**
+  - Examine statistical results in light of the framework's theoretical structure
+  - Identify the strongest correlations, most significant differences, and revealing patterns
+  - Look for framework validation (do dimensions behave as theorized?)
+  - Detect unexpected patterns that challenge or extend the framework
 
-  4. **Research Findings**
-     - Primary conclusions supported by statistical evidence
-     - Secondary findings and patterns
-     - Unexpected results or anomalies in the data
+  **Step 4: Discover Unanticipated Insights**
+  - Look beyond the researcher's stated objectives
+  - Identify statistical patterns that reveal framework possibilities not explored
+  - Consider cross-dimensional relationships that might surprise the researcher
+  - Assess whether the framework captured phenomena the researcher didn't anticipate
 
-  5. **Methodological Notes**
-     - Analytical approach and rationale
-     - Limitations of the statistical analysis
-     - Confidence in findings based on data quality
+  **Step 5: Synthesize Framework Performance Assessment**
+  - Evaluate how well the framework performed in this analytical context
+  - Identify framework strengths, limitations, and unexpected capabilities
+  - Consider implications for framework refinement or broader application
 
-  6. **Research Implications**
-     - What these statistical results mean for the research question
-     - Broader implications for the field of study
-     - Recommendations for future research
+  ## REPORT STRUCTURE FOR RESEARCHERS
 
-  ANALYTICAL PRINCIPLES:
-  - Every claim must be traceable to specific statistical results
-  - Use precise statistical language and appropriate confidence levels
-  - Acknowledge limitations and uncertainties in the data
-  - Maintain academic objectivity and rigor
-  - Focus on patterns, correlations, and statistical relationships
+  ### 1. Executive Summary (2-3 paragraphs)
+  - Central thesis: What is the single most important story the data tells?
+  - Key statistical findings that validate or challenge the framework
+  - Primary insights with their significance for the research question
+  - Framework effectiveness assessment
 
-  OUTPUT FORMAT:
-  Provide a complete, publication-ready research report in academic markdown format.
-  Use appropriate headers, statistical notation, and professional language.
-  The report should stand alone as a coherent analysis of the statistical findings.
+  ### 2. Framework Analysis & Performance
+  - **Framework Architecture**: Core purpose, dimensions, and theoretical foundations
+  - **Statistical Validation**: How well do the data patterns match framework expectations?
+  - **Dimensional Effectiveness**: Which dimensions performed strongest/weakest and why
+  - **Cross-Dimensional Insights**: Unexpected relationships between framework elements
 
-  Remember: This is Stage 1 - NO quotes or evidence text should appear in this report.
-  All analysis must be grounded in the statistical data provided.
+  ### 3. Experimental Intent & Hypothesis Evaluation
+  - **Research Question Assessment**: What the researcher was trying to discover
+  - **Hypothesis Outcomes** (if present): CONFIRMED/FALSIFIED/INDETERMINATE with statistical evidence
+  - **Exploratory Findings** (if no hypotheses): Primary patterns discovered through analysis
+  - **Intent vs. Discovery**: What the data revealed beyond the researcher's expectations
+
+  ### 4. Statistical Findings & Patterns
+  - **Primary Results**: Strongest statistical patterns with framework interpretation
+  - **Dimensional Analysis**: Performance of each framework dimension with cross-comparisons
+  - **Correlation Networks**: Relationships between dimensions and derived metrics
+  - **Anomalies & Surprises**: Unexpected results that challenge assumptions
+
+  ### 5. Unanticipated Insights & Framework Extensions
+  - **Beyond the Research Question**: Insights the researcher may not have anticipated
+  - **Framework Potential**: Capabilities revealed that weren't explicitly explored
+  - **Methodological Discoveries**: What this analysis reveals about the framework's broader utility
+  - **Theoretical Implications**: How findings extend or challenge the framework's foundations
+
+  ### 6. Limitations & Methodological Assessment
+  - **Statistical Power**: Sample size considerations and confidence levels
+  - **Framework Limitations**: Where the framework may have missed important phenomena
+  - **Analytical Constraints**: Boundaries of what can be concluded from this data
+  - **Future Research Directions**: What should be explored next
+
+  ### 7. Research Implications & Significance
+  - **Field Contributions**: How these findings advance the research domain
+  - **Framework Development**: Implications for refining or extending the framework
+  - **Methodological Insights**: What this reveals about computational social science approaches
+  - **Broader Applications**: Where else this framework might be valuable
+
+  ## ANALYTICAL DEPTH REQUIREMENTS
+
+  ### Statistical Interpretation Standards
+  - **Well-Powered Results (N≥30)**: Full inferential interpretation with confidence
+  - **Moderate Power (N=15-29)**: Cautious interpretation with explicit power limitations
+  - **Exploratory Results (N<15)**: Descriptive focus with suggestive pattern identification
+  - **No LLM Math**: Interpret provided statistics as definitive - never calculate
+
+  ### Framework-Centric Analysis
+  - **Theoretical Grounding**: Connect statistical patterns to framework's intellectual foundations
+  - **Dimensional Sophistication**: Analyze each dimension's performance and cross-relationships
+  - **Validation Assessment**: Evaluate whether the framework behaves as theorized
+  - **Extension Opportunities**: Identify where the framework could be enhanced or applied differently
+
+  ### Insight Generation Principles
+  - **Beyond Confirmation**: Look for patterns that extend beyond hypothesis testing
+  - **Framework Innovation**: Consider how findings might refine or revolutionize the framework
+  - **Researcher Surprise**: Identify insights the researcher likely didn't anticipate
+  - **Field Advancement**: Assess broader implications for computational social science
+
+  ## OUTPUT REQUIREMENTS
+  
+  **Academic Quality**: Publication-ready analysis suitable for peer-reviewed journals
+  **Intellectual Depth**: Demonstrate sophisticated understanding of framework theory and statistical patterns
+  **Research Value**: Provide insights that advance both the specific research question and the broader field
+  **Framework Focus**: Keep the framework's intellectual architecture at the center of all analysis
+
+  **Target Length**: 2500-4000 words for comprehensive analysis
+  **Tone**: Academic but accessible, demonstrating deep expertise while remaining readable
+  **Statistical Precision**: Follow APA standards for numerical reporting and significance interpretation
+
+  Remember: This is Stage 1 - pure data-driven analysis that reveals the framework's performance and potential. Evidence integration comes in Stage 2.
