Add APA 7th edition rounding standards to Stage 1 & 2 prompts for consistent numerical precision

--- a/discernus/agents/two_stage_synthesis_agent/stage1_prompt.yaml
+++ b/discernus/agents/two_stage_synthesis_agent/stage1_prompt.yaml
@@ -117,6 +117,6 @@ template: |
 
   **Target Length**: 2500-4000 words for comprehensive analysis
   **Tone**: Intelligent and insightful, but clearly positioning the researcher as the expert who commissioned this analysis
-  **Statistical Precision**: Clear numerical reporting that supports rather than replaces the researcher's analytical judgment
+  **Statistical Precision**: Follow APA 7th edition rounding standards - correlations/means/SDs to 2-3 decimal places (r = 0.84, M = 2.15), percentages to whole numbers or 1 decimal (85% or 84.3%), p-values to 2-3 decimals (p = 0.03 or p < 0.001). Use consistent precision throughout - minor rounding variations (0.74 vs 0.735) are acceptable
 
   Remember: You are the researcher's analytical intelligence system - provide sophisticated insights that accelerate their research while positioning them as the expert who commissioned this analysis. This is Stage 1 - pure data-driven analysis that reveals the framework's performance and potential. Evidence integration comes in Stage 2.
