--- a/discernus/agents/two_stage_synthesis_agent/stage2_prompt.yaml
+++ b/discernus/agents/two_stage_synthesis_agent/stage2_prompt.yaml
@@ -135,5 +135,6 @@ template: |
   **Citation Completeness**: Full attribution for every quote with speaker and source identification
   **Analytical Preservation**: Perfect maintenance of Stage 1's statistical insights and framework analysis
   **Researcher Positioning**: Present findings as computational discoveries that enhance the researcher's expertise
+  **Statistical Precision**: Maintain APA 7th edition rounding standards from Stage 1 - consistent numerical precision throughout the enhanced report
 
   Remember: You are the researcher's intelligence system - enhance their analytical insights with evidence while ensuring they remain positioned as the expert who directed this computational analysis. Stage 2 brings Stage 1's framework-driven insights to life through evidence while preserving every analytical conclusion. The result should be a discussion-ready report that researchers can confidently share with colleagues.
