--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,18 +43,14 @@ dependencies = [
     "numpy>=1.26",
     "scipy>=1.13",
     
-    # Jupyter and notebook support
-    "jupyter>=1.0.0",
-    "nbformat>=5.7.0",
+    # Jupyter and notebook support (removed unused dependencies)
     
     # Configuration and serialization
     "PyYAML>=6.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     
-    # Text processing and NLP
-    "nltk>=3.8",
-    "textblob>=0.15.3",
+    # Text processing and NLP (removed unused dependencies)
     
     # Google Cloud Platform (Vertex AI)
     "google-cloud-aiplatform>=1.104.0",
@@ -67,9 +63,7 @@ dependencies = [
     "ratelimit>=2.2",
     "pingouin>=0.5",
     "statsmodels>=0.14",
-    # Search and indexing (align with requirements.txt)
-    "typesense>=0.20.0",
-    "rank_bm25>=0.2.2",
+    # Search and indexing (removed unused dependencies)
 ]
 
 [project.optional-dependencies]
