--- a/requirements.txt
+++ b/requirements.txt
@@ -15,18 +15,14 @@ pandas>=1.5.0
 numpy>=1.24.0
 scipy>=1.10.0
 
-# Jupyter and notebook support
-jupyter>=1.0.0
-nbformat>=5.7.0
+# Jupyter and notebook support (removed unused dependencies)
 
 # Configuration and serialization
 PyYAML==6.0.1
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
 
-# Text processing and NLP
-nltk>=3.8
-textblob>=0.15.3
+# Text processing and NLP (removed unused dependencies)
 
 # Google Cloud Platform (Vertex AI)
 google-cloud-aiplatform>=1.104.0
@@ -36,6 +32,4 @@ google-auth>=2.40.0
 youtube-transcript-api>=0.6.2
 yt-dlp>=2025.6.9
 
-# Search and indexing
-typesense>=0.20.0
-rank_bm25>=0.2.2
+# Search and indexing (removed unused dependencies)
