--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "discernus"
 version = "2.0.0"
 description = "Discernus THIN v2.0 Research Platform"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.8,<3.14"
 license = {text = "MIT"}
 authors = [
     {name = "Discernus Team"},
@@ -46,7 +46,7 @@ dependencies = [
     # Jupyter and notebook support (removed unused dependencies)
     
     # Configuration and serialization
-    "PyYAML>=6.0",
+    "PyYAML>=6.0,<7.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     
