--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ scipy>=1.10.0
 # Jupyter and notebook support (removed unused dependencies)
 
 # Configuration and serialization
-PyYAML==6.0.1
+PyYAML>=6.0.1,<7.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
 
